hphp/test/zend/good/Zend/tests/errmsg_022.php
<?php

function foo (&$var) {
}

foo(1);

echo "Done\n";
?>