hphp/test/zend/bad/Zend/tests/multibyte/multibyte_encoding_005.php
<?php
	function 予蚕能($引数)
	{
		echo $引数;
	}

	予蚕能("ドレミファソ");
?>